Login added and comprobacion

--- a/finalproject-front/src/app/app.component.html
+++ b/finalproject-front/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Holiiiiii</h1>
-<!--<div *ngFor="let user of users">{{user}}</div>-->
+<app-user routerLink='login'></app-user>
+<a routerLink='/home' routerLinkActive="active">Home</a>
+<router-outlet></router-outlet>
