--- a/finalproject-front/src/app/app.component.html
+++ b/finalproject-front/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-user routerLink='login'></app-user>
-<a routerLink='/home' routerLinkActive="active">Home</a>
-<router-outlet></router-outlet>
+<div>
+    <router-outlet></router-outlet>
+</div>
