--- a/finalproject-front/src/app/modules/finalProject/components/register/register.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/register/register.component.css
@@ -26,7 +26,8 @@ h1 {
     margin-top: 10rem;
 }
 
-.custom-form input {
+.custom-form input,
+.custom-form select {
     display: block;
     margin: 2rem 0;
     width: 100%;
@@ -45,15 +46,11 @@ h1 {
     font-size: 0.875rem;
     color: #ffffff;
     font-weight: bold;
-    background-color: #BCE8E3;
+    background-color: #E9D3E7;
     width: 100%;
     display: block;
     padding: 0.875rem 1rem;
     border-radius: 1.5rem;
     box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
     cursor: pointer;
-}
-
-.custom-form button.mt-4 {
-    background-color: #E9D3E7;
 }
