--- a/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
@@ -1,19 +1,11 @@
-<div class="container-fluid my-3">
-    <form class="form-container" [formGroup]="form">
-        <div class="form-group row">
-            <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" formControlName="email" placeholder="email@example.com">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <label for="inputPassword2" class="sr-only">Password</label>
-                <input type="password" class="form-control" formControlName="pass" placeholder="Password">
-            </div>
-        </div>
+<div class="container-fluid my-3 register">
+    <form class="form-container custom-form" [formGroup]="form">
+        <h1>Login</h1>
+        <input type="email" class="form-control" formControlName="email" name="email" placeholder="Email" required="required">
+        <input type="password" class="form-control" formControlName="pass" name="password" placeholder="Password" required="required">
+
         <div *ngIf="esError===true">{{error}}</div>
-        <button type="submit" class="btn btn-primary mb-2" (click)="recogerDatos()">Confirm identity</button>
+        <button type="submit" (click)="recogerDatos()">Login</button>
+        <button type="button" class="mt-4" (click)="register()">Register</button>
     </form>
 </div>
