--- a/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
@@ -1,11 +1,21 @@
 <p>home works!</p>
+<app-navBar></app-navBar>
 <div class="card" *ngIf="user">
-    <div class="card-header">
-        Hola {{user.name}}
+    <div class="card-body fondo">
+        <h1 class="card-title">Hola {{user.name}}</h1>
+        <p class="card-text">¿Que te gustaría comer hoy?</p>
+        <form>
+            <div class="form-group">
+                <input type="text" [(ngModel)]="find" class="form-control" id="formGroupExampleInput" placeholder="Buscar Recetas">
+            </div>
+        </form>
     </div>
+</div>
+
+<div class="card text-center" *ngIf="labels">
     <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h1>Explorar todas las categorías de recetas</h1>
+        <button *ngFor="let label of labels" (click)="getLabel(label.id)" class="btn btn-info ml-3 mr-3 mt- mb-3">{{label.name}}</button>
+
     </div>
 </div>
