--- a/finalproject-front/src/app/modules/finalProject/components/home/home.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/home/home.component.css
@@ -3,7 +3,7 @@ div.fondo {
     background-image: url("/assets/img/portada.jpg");
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: initial;
     background-size: cover;
 }
 
@@ -12,4 +12,18 @@ div.fondo>p {
     font-weight: bold;
     color: white;
     text-shadow: 2px;
+}
+
+h3 {
+    font-weight: bolder;
+}
+
+img {
+    width: 24vw;
+    height: 40vh;
+}
+
+.card-title,
+.card-body {
+    width: 24vw;
 }
