--- a/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user/user.component.html
@@ -2,10 +2,10 @@
     <form class="form-container custom-form" [formGroup]="form">
         <h1>Login</h1>
         <input type="email" class="form-control" formControlName="email" name="email" placeholder="Email" required="required">
-        <input type="password" class="form-control" formControlName="pass" name="password" placeholder="Password" required="required">
+        <input type="password" class="form-control" formControlName="pass" name="password" placeholder="Password" required>
 
         <div *ngIf="esError===true">{{error}}</div>
-        <button type="submit" (click)="recogerDatos()">Login</button>
+        <button type="submit" (click)="recogerDatos()" [disabled]="!form">Login</button>
         <button type="button" class="mt-4" (click)="register()">Register</button>
     </form>
 </div>
