--- a/finalproject-front/src/app/modules/finalProject/components/label/label.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/label/label.component.html
@@ -1,13 +1,14 @@
 <app-navBar></app-navBar>
-<p *ngIf="label">Recetas con la etiqueta {{label.name}}</p>
+<div class="container-fluid">
+    <h2 *ngIf="label">Recetas con la etiqueta {{label.name}}</h2>
 
-<div class="row row-cols-1 row-cols-md-2" *ngIf="recipes">
-    <div class="col mb-4" *ngFor="let recipe of recipes">
-        <div class="card" (click)="findRecipe(recipe.id)">
-            <img src="api/recipes/uploads/img/{{recipe.img}}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{recipe.name}}</h5>
-                <p class="card-text">{{recipe.preparation}}</p>
+    <div class="row row-cols-md-3" *ngIf="recipes">
+        <div class="col mb-4" *ngFor="let recipe of recipes">
+            <div class="card" (click)="findRecipe(recipe.id)">
+                <img src="api/recipes/uploads/img/{{recipe.img}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h3 class="card-title">{{recipe.name}}</h3>
+                </div>
             </div>
         </div>
     </div>
