--- a/finalproject-front/src/app/components/navBar/navBar.component.html
+++ b/finalproject-front/src/app/components/navBar/navBar.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" (click)="home()">
         <fa-icon [icon]="faCoffee"> </fa-icon>&nbsp;&nbsp; DAW-cetas
     </a>
     <div class="column navbar-collapse" *ngIf="user!==null">
         <ul class="navbar-nav" *ngIf="user.roles[0].name==='ROLE_READER' ||user.roles[0].name==='ROLE_CREATOR'">
-            <!--<li class="nav-item">
-                <a class="nav-link" (click)="home()">Home <span class="sr-only">(current)</span></a>
-            </li>-->
+            <li class="nav-item" *ngIf="user.roles[0].name==='ROLE_CREATOR'">
+                <a class="nav-link" (click)="misRecetas()">MisRecetas</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" (click)="recetas()">Recetas</a>
             </li>
@@ -16,16 +16,16 @@
             <li class="nav-item">
                 <nav>
                     <button class="nav-link" *ngIf="user!==null" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <fa-icon *ngIf="user.roles[0].name==='ROLE_READER'"  [icon]="faUser"> </fa-icon>
-                      <fa-icon *ngIf="user.roles[0].name==='ROLE_CREATOR'"  [icon]="faUserEdit"> </fa-icon>
-                      <fa-icon *ngIf="user.roles[0].name==='ROLE_ADMIN'"  [icon]="faUserCog"> </fa-icon>
-                      {{user.name}}
+                      <fa-icon *ngIf="user.roles[0].name==='ROLE_READER'"  [icon]="faUser" class="ml-3"> </fa-icon>
+                      <fa-icon *ngIf="user.roles[0].name==='ROLE_CREATOR'"  [icon]="faUserEdit" class="ml-3"> </fa-icon>
+                      <fa-icon *ngIf="user.roles[0].name==='ROLE_ADMIN'"  [icon]="faUserCog" class="ml-3"> </fa-icon>
+                      {{user.name}} &nbsp;&nbsp;
                   </button>
                 </nav>
-                <div class="collapse" style="background-color: blue;" id="navbarToggleExternalContent">
+                <div class="collapse" id="navbarToggleExternalContent">
                     <div class="p-2">
                         <li class="nav-item">
-                            <a class="nav-link" (click)="help()">Datos Personales</a>
+                            <a class="nav-link" (click)="personalData()">Datos Personales</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" (click)="help()">Ayuda</a>
@@ -38,7 +38,7 @@
             </li>
         </ul>
     </div>
-    <div class="column navbar-collapse" *ngIf="user===null">
+    <!--<div class="column navbar-collapse" *ngIf="user===null">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" (click)="home()">Home <span class="sr-only">(current)</span></a>
@@ -53,7 +53,7 @@
                 <a class="nav-link" (click)="register()">Registrarse</a>
             </li>
             <li class="nav-item">
-                <div class="collapse" style="background-color: blue;" id="navbarToggleExternalContent">
+                <div class="collapse" id="navbarToggleExternalContent">
                     <div class="p-2">
                         <li class="nav-item">
                             <a class="nav-link" (click)="help()">Datos Personales</a>
@@ -68,5 +68,5 @@
                 </div>
             </li>
         </ul>
-    </div>
+    </div>-->
 </nav>
