--- a/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.html
@@ -14,13 +14,21 @@
     <table class="table table-striped" *ngIf="recipes">
         <thead>
             <tr>
-                <th scope="col">Name</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Herramientas</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let recipe of recipes">
                 <td>{{recipe.name}}</td>
+                <td>
+                    <button (click)="editRecipe(recipe.id)"><img class="iconos" src="assets/icons/edicion.png"></button>
+                    <button class="ml-3" (click)="removeRecipe(recipe.id)"><img class="iconos"  src="assets/icons/borrador.png"></button>
+                </td>
             </tr>
         </tbody>
     </table>
+    <div class="row">
+        <button class="quitarColor col-md-1 offset-md-10" (click)="addRecipe()"><img class="iconos" src="assets/icons/anadir.png"></button>
+    </div>
 </div>
