--- a/finalproject-front/src/app/modules/finalProject/components/home/home.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/home/home.component.css
@@ -37,3 +37,31 @@ img {
 .card-recipe {
     width: 25%;
 }
+
+.btn-formato {
+    color: #0099CC;
+    background: transparent;
+    border: 2px solid #ccd8ef;
+    border-radius: 6px;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: white;
+    color: black;
+    border: 2px solid #ccd8ef;
+}
+
+.btn-formato:hover {
+    background-color: #ccd8ef;
+    color: white;
+}
