--- a/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
@@ -45,6 +45,6 @@
 <div class="card text-center " *ngIf="labels">
     <div class="card-body ">
         <h1>Explorar todas las categorías de recetas</h1>
-        <button *ngFor="let label of labels" (click)="getLabel(label.id)" class="btn btn-info ml-3 mr-3 mt- mb-3 label">{{label.name}}</button>
+        <button *ngFor="let label of labels" (click)="getLabel(label.id)" class="btn btn-info ml-3 mr-3 mt- mb-3 label btn-formato">{{label.name}}</button>
     </div>
 </div>
